# zuu

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/zuu/: __init__.py  _dictkeysdict.py  _fileprop.py  _quick_save_dict.py  base64_img.py  git.py  github.py  io_.py  json_.py  logging_.py  markdown_prop.py  scoop.py
tests/: test_dkd.py  test_fileprop.py  test_github.py  test_importlib.py  test_os.py  test_quickSaveDict.py  test_singleton.py  test_string.py  test_time.py  test_traverse.py
