[project]
name = "zuu"
version = "3.0.3"
description = "Zack's Useful Utilities"
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = [
    
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "pydotenv>=0.0.7",
    "toml>=0.10.2",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "keyring>=25.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zuu"]

[tool.ruff]
ignore = [
    "F401"
]
